fix responsive and update
